# MasterThesis

./: CMakeLists.txt
brute/: CMakeLists.txt
brute/cmake/: FindObjectness.cmake
brute/include/Objectness/: Objectness.h
brute/lib/: libobjectness.dylib
brute/model/: ObjNessB2W8MAXBGR.wS2
brute/src/: adjacency.h  connection.h  features_segment.h  main.cpp  objectness_location_prior.h  objectness_segment.h  random_stopping_criterion.h  segment.h  selection_prior.h  uniform_prior.h  uniform_segment.h
felz/: CMakeLists.txt
felz/src/: cluster.h  conversion.cpp  convolve.h  edge.h  filter.h  segment-graph.h  segment-image.h  segment.cpp
gpb/: CMakeLists.txt
gpb/src/: connection.h  main.cpp  segment.h
gpu/: CMakeLists.txt  Makefile  Makefile-e  conversion.cpp  conversion.h  main.cpp  segmentationTree.cpp  segmentationTree.cu  segmentationTree.cu_bk  segmentationTree.h
gpu/cmake/: FindOpenCVlibstdcxx.cmake
gpu/data/: airport.pbm  lena.ppm  test.pbm
graph/: CMakeLists.txt
graph/src/: segment-image.h  segment.cpp
objectness/Objectness/: CMakeLists.txt  Main.cpp  Objectness.cpp
random/: .CMakeLists.txt.swo  CMakeLists.txt
random/include/Objectness/: Objectness.h  stdafx.h
random/lib/: libobjectness.dylib
random/model/: ObjNessB2W8MAXBGR.wS1
random/src/: .main.cpp.swo  connection.h  features_segment.h  levels.cpp  location_prior.h  main.cpp  objectness_location_prior.h  objectness_prior.h  objectness_segment.h  random_stopping_criterion.h  segment.h  selection_prior.h  stochastic.cpp  stopping_criterion.h  uniform_prior.h  uniform_segment.h
sande/: CMakeLists.txt
sande/src/: adjacency.h  connection.h  main.cpp  segment.h
src/: edge.h  segment-graph.h  segment-image.h  segment.cpp
tree/: CMakeLists.txt  Makefile  tree copy.cpp
tree/old/: Connection.cpp  Connection.h  Surface.cpp  Surface.h  segmentation_tree.cpp  thesis
tree/old/thesis.dSYM/Contents/: Info.plist
tree/old/thesis.dSYM/Contents/Resources/DWARF/: thesis
tree/src/: adjacency.h  edge.h  tree.cpp
